--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "react-hook-form": "^4.9.8"
+    "react-hook-form": "^4.9.8",
+    "styled-components": "^5.0.1"
   }
 }
